Fix fullscreen mode and get rid of buggy scrollbars

--- a/community/browser/app/styles/stream.styl
+++ b/community/browser/app/styles/stream.styl
@@ -47,6 +47,11 @@
 
         .view-result-graph
           background-color: #F9FBFD
+          display: table
+          width: 100%
+          height: 100%
+          > *
+            display: table-row
           svg
             height: 400px
             width: 100%
@@ -57,6 +62,7 @@
           .graph-contents
             position: relative
             overflow: hidden
+            height: 100%
 
         .view-result-table
           border-top: 1px solid #fff
